--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,23 +50,19 @@
             <p></p>
 
             <ol>
-                Vous avez le plus grand nombre de kill, alors vous êtes un <strong>Killer</strong>
-            </ol>
-
-            <ol>
-                Il s'agit du titre le plus prestigieux ;)
+                Vous avez le plus grand nombre de kill, alors vous êtes le <strong>Top Killer</strong>
             </ol>
 
             <p></p>
 
             <ol>
-                Vous êtes encore en vie et vous avez le plus grand nombre de kill, vous êtes désormais le <strong>Killer Suprême</strong>
+                Vous êtes encore en vie et vous avez le plus grand nombre de kill <span class="underline">des joueur encore en vie</span>, vous êtes désormais le <strong>Killer Alpha</strong>
             </ol>
-            
+    
             <p></p>
 
             <p>
-                Si vous n'êtes pas top Killer de la partie, mais que vous êtes top killer des vivants je vous accorde le titre de <strong>Petit Killer</strong>
+                Si vous êtes encore en vie et que vous avez le plus grand nombre de kill <span class="underline">de la partie</span>, vous mériter le titre prestigieux du <strong>Killer Suprême</strong>
             </p>
 
         </li>
