--- a/public/page.css
+++ b/public/page.css
@@ -6,3 +6,18 @@
     width: 100%; /* Prendre toute la largeur de la page */
     height: 76px;
   }
+
+  .bottom-zone {
+    position: fixed;
+    bottom: 0%;
+    margin: -4%;
+    width: 100%;
+    height: 76px;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+  }
+
+  .underline {
+    text-decoration: underline;
+  }
