--- a/views/game/historique.ejs
+++ b/views/game/historique.ejs
@@ -20,7 +20,7 @@
             <h3 class="ui dividing header"> Game : <%=games[i].name %> </h3>
 
                 <p> <%= "Début de la partie : " + games[i].date_debut %> </p> 
-                <p> <%= "Durée de la partie : " + games[i].date_fin + " h" %> </p> 
+                <p> <%= "Fin de la partie : " + games[i].date_fin %> </p> 
                 <p> <%= "Nombre de Joueurs : " + games[i].nb_Player %> </p> 
                 <p> <%= "Gagnant : " + games[i].winner %> </p>
 
