--- a/views/game/display.ejs
+++ b/views/game/display.ejs
@@ -23,7 +23,7 @@
                             <% if(game.TableInGame[i].status == "life"){ %>
                                 <img class="right floated mini ui image" src="/assets/picture/life.png">
                             <% } else { %>
-                                <img src="/assets/picture/dead.png" alt="Mort">
+                                <img class="right floated mini ui image" src="/assets/picture/dead.png">
                             <% } %>
                         
                         
