--- a/views/friend.ejs
+++ b/views/friend.ejs
@@ -40,40 +40,46 @@
 Your friends : 
 <p></p>
 
-<div class="ui cards">
-    <% for (var i = 0; i < listOfFriend.length;  i++ ) { %>
+<div class="ui two column grid">
+    <% for (var i = 0; i < listOfFriend.length; i++ ) { %>
+        <div class="column">
+            <div class="ui card">
+                <div class="image-container">
+                    <img src="/assets/picture/perso<%=i%>.png" >
+                </div>
 
-        <div class="card">
-            <div class="image-container">
-            <img src="/assets/picture/perso<%=i%>.png" >
-            </div>
-            <div class="content">
-            <div class="header"><%= listOfFriend[i] %></div>
-            <div class="meta">
-                <a>titre</a>
-            </div>
-            <div class="description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quas nisi nam, repellendus impedit asperiores maxime. Magnam assumenda amet voluptatem? Corporis possimus repudiandae exercitationem unde vitae molestias accusantium nobis ut.
-            </div>
-            </div>
-            <div class="extra content">
-            <span class="right floated">
-                <form action="/delete-friend" method="post">
-                    <input type="hidden" name="del" value="<%= listOfFriend[i] %>">
-                    <button type="submit" class="ui mini red labeled submit icon button">
-                        <i class="icon edit"></i>
-                        supprimer
-                    </button>
-                </form>
-            </span>
-            <span>
-                <i class="user icon"></i>
-                123 Games
-            </span>
+                <div class="content">
+                    <div class="header"><%= listOfFriend[i] %></div>
+                    <div class="meta">
+                        <a>titre</a>
+                    </div>
+                    <div class="description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quas nisi nam, repellendus impedit asperiores maxime.
+                    </div>
+                </div>
+
+                <div class="extra content" style="display: flex; justify-content: space-between; align-items: center;">
+                    <span>
+                        <i class="user icon"></i>
+                        123 <br>
+                        Games
+                    </span>
+
+                    <span style="margin-left: auto;">
+                        <form action="/delete-friend" method="post">
+                            <input type="hidden" name="del" value="<%= listOfFriend[i] %>">
+                            <button type="submit" class="ui mini red button">
+                                Delete
+                            </button>
+                        </form>
+                    </span>
+                </div>  
+
             </div>
         </div>
     <% } %>
 </div>
+
 
 <%- include ('./menu.ejs') %>
 
