progress barre et validation kill

--- a/views/game/create.ejs
+++ b/views/game/create.ejs
@@ -21,47 +21,19 @@
             <div class="ui left icon input">
               <input type="text" 
               name="paramGame" 
-              placeholder = "name">
+              placeholder = "name"
+              required>
             </div>
         </div>
 
         <h3> Date de fin </h3>
 
         <div class="field">
-            <div class="ui left icon input">
-              <input type="text" 
-              name="paramDate" 
-              placeholder = "day">
-            </div>
-        </div>
-        <div class="field">
-            <div class="ui left icon input">
-              <input type="text" 
-              name="paramDate" 
-              placeholder = "month">
-            </div>
-        </div>
-        <div class="field">
-            <div class="ui left icon input">
-              <input type="text" 
-              name="paramDate" 
-              placeholder = "year">
-            </div>
-        </div>
-
-        <div class="field">
-            <div class="ui left icon input">
-              <input type="text" 
-              name="paramDate" 
-              placeholder = "hour">
-            </div>
-        </div>
-        <div class="field">
-            <div class="ui left icon input">
-              <input type="text" 
-              name="paramDate" 
-              placeholder = "min">
-            </div>
+          <div class="ui left icon input">
+            <input type="datetime-local" 
+            name="paramDate"
+            required>
+          </div>
         </div>
 
         <p></p>
