--- a/public/card.css
+++ b/public/card.css
@@ -24,3 +24,15 @@
     border-radius: 5px; /* Coins arrondis */
     overflow: hidden; /* Évite le débordement de contenu */
 }
+
+.ui.card.reveal{
+    width : 100%;
+    height: 200px;
+}
+
+.ui.small.fade.reveal.image{
+    width: 100%;       
+    height: auto;
+    object-fit: cover; 
+    z-index: 0;
+}
