--- a/views/game/display.ejs
+++ b/views/game/display.ejs
@@ -92,19 +92,23 @@
                                     <%= TableShuffle[i].name %>
                                 </div>
                                 <div class="meta">
-                                    sub Name
-                                </div>
-                                <div class="description">
                                     Kill : <%= TableShuffle[i].nbKill %>
                                 </div>
-
-                                <form action="/game/display" method="POST" style="position: absolute; bottom: 10px; right: 10px;">
-                                    <button type="submit" class="ui mini button">
-                                        ajouter
-                                    </button>
-                                    <input type="hidden" name="add_friend_inGame" value="<%= TableShuffle[i].name %>">
-                                </form>
-            
+                                
+                                <br>
+                                <br> 
+                                
+                            
+                                <% if(TableShuffle[i].name == username || friends.includes(TableShuffle[i].name)){%>
+                                <% }else{ %>
+                                    <form action="/game/display" method="POST" style="position: absolute; bottom: 10px;">
+                                        <button type="submit" class="ui very mini button">
+                                            <i class="user icon"></i>
+                                            add friend
+                                        </button>
+                                        <input type="hidden" name="add_friend_inGame" value="<%= TableShuffle[i].name %>">
+                                    </form>
+                                <%}%>
                             </div>
                         </div>
                 </div>
