--- a/views/header.ejs
+++ b/views/header.ejs
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="/assets/menu.css">
     <link rel="stylesheet" href="/assets/card.css">
     <link rel="stylesheet" href="/assets/page.css">
+    <link rel="stylesheet" href="/assets/toggle.css">
+
 
     <title> AshGames_Killer </title>
 
