--- a/views/game/create.ejs
+++ b/views/game/create.ejs
@@ -56,7 +56,9 @@
 
         <p></p>
 
-        <button type="submit" class="ui blue submit button"> Suivant </button>
+        <button type="submit" class="ui green submit button"> 
+          <i class="icon edit"></i> Suivant
+        </button>
 
       </div>
     </form>
