--- a/views/game/create.ejs
+++ b/views/game/create.ejs
@@ -4,7 +4,19 @@
 
 <%- include('../header.ejs') %>
 
-<h1> Create Game </h1>
+<div class="ui breadcrumb">
+  <h2> Creation Game </h2>
+
+  <div class="active section">Name & End Date</div>
+
+  <div class="divider"> / </div>
+  <div class="section">Add Players</div>
+
+  <div class="divider"> / </div>
+  <div class="section">Select Task</div>
+</div>
+
+<br><br>
 
 <%- include('../flash.ejs') %>
 
