--- a/views/game/init.ejs
+++ b/views/game/init.ejs
@@ -4,7 +4,19 @@
 
 <%- include('../header.ejs') %>
 
-<h1> Init Game </h1>
+<div class="ui breadcrumb">
+    <h2> Creation Game </h2>
+
+    <div class="section">Name & End Date</div>
+
+    <div class="divider"> / </div>
+    <div class="active section">Add Players</div>
+
+    <div class="divider"> / </div>
+    <div class="section">Select Task</div>
+</div>
+
+<br><br>
 
 <%- include('../flash.ejs') %>
 
