--- a/views/game/task.ejs
+++ b/views/game/task.ejs
@@ -4,7 +4,17 @@
 
 <%- include('../header.ejs') %>
 
-<h1> Tasks </h1>
+<div class="ui breadcrumb">
+    <h2> Creation Game </h2>
+
+    <div class="section">Name & End Date</div>
+
+    <div class="divider"> / </div>
+    <div class="section">Add Players</div>
+
+    <div class="divider"> / </div>
+    <div class="active section">Select Task</div>
+</div>
 
 <%- include('../flash.ejs') %>
 
